--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,11 +21,14 @@
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/http": "^5.10.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
     "@ionic/storage": "^2.2.0",
     "cordova-android": "^8.0.0",
+    "cordova-plugin-advanced-http": "^2.1.1",
+    "cordova-plugin-file": "^6.0.2",
     "cordova-sqlite-storage": "^3.2.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
@@ -75,7 +78,10 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-advanced-http": {
+        "OKHTTP_VERSION": "3.10.0"
+      }
     },
     "platforms": [
       "android"
