--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,13 +22,16 @@
     "@angular/router": "^7.2.2",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/http": "^5.10.0",
+    "@ionic-native/local-notifications": "^5.12.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.10.0",
     "@ionic/angular": "^4.1.0",
     "@ionic/storage": "^2.2.0",
     "cordova-android": "^8.0.0",
     "cordova-plugin-advanced-http": "^2.1.1",
+    "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "cordova-sqlite-storage": "^3.2.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
@@ -81,7 +84,8 @@
       "cordova-sqlite-storage": {},
       "cordova-plugin-advanced-http": {
         "OKHTTP_VERSION": "3.10.0"
-      }
+      },
+      "cordova-plugin-local-notification": {}
     },
     "platforms": [
       "android"
